--- a/CompetencesApp/CompetencesApp.csproj
+++ b/CompetencesApp/CompetencesApp.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource.cs" />
     <Compile Include="Teacher.cs" />
+    <Compile Include="Admin.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserCompetenceTeacher.cs" />
     <Compile Include="UserCompetence.cs" />
