--- a/CompetencesApp/CompetencesApp.csproj
+++ b/CompetencesApp/CompetencesApp.csproj
@@ -105,6 +105,30 @@
     <Compile Include="Form3.Designer.cs">
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormAddCompetence.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAddCompetence.Designer.cs">
+      <DependentUpon>FormAddCompetence.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormAddCompetenceBlock.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAddCompetenceBlock.Designer.cs">
+      <DependentUpon>FormAddCompetenceBlock.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormAddPromotion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAddPromotion.Designer.cs">
+      <DependentUpon>FormAddPromotion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormAddUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAddUser.Designer.cs">
+      <DependentUpon>FormAddUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="HttpRequests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Promotion.cs" />
@@ -133,6 +157,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form3.resx">
       <DependentUpon>Form3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAddCompetence.resx">
+      <DependentUpon>FormAddCompetence.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAddCompetenceBlock.resx">
+      <DependentUpon>FormAddCompetenceBlock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAddPromotion.resx">
+      <DependentUpon>FormAddPromotion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAddUser.resx">
+      <DependentUpon>FormAddUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
